cmd/server: create Customers object when Originator is created
